--- a/frontend/pages/home/home.css
+++ b/frontend/pages/home/home.css
@@ -1,69 +1,113 @@
 body {
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  .topnav {
-    overflow: hidden;
-    background-color: #333;
-  } 
-  
-  .topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  .topnav a.active {
-    background-color: #04AA6D;
-    color: white;
-  }
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-  table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-  }
-  
-  td, th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
-  }
-  
-  tr:nth-child(even) {
-    background-color: #dddddd;
-  }
+#container {
+  background-color: white;
+  opacity: 100%;
+}
 
-  .tempHigh{
-    color: #ff0000;
-    width: 20px;
-  }
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
 
-  .tempMidHigh{
-    color: #fffb00;
-    width: 20px;
-  }
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
 
-  .tempNormal{
-    color: #02ed26;
-    width: 20px;
-  }
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
 
-  .tempMidLow{
-    color: #16fae7 ;
-    width: 20px;
-  }
+.topnav a.active {
+  background-color: #04aa6d;
+  color: white;
+}
 
-  .tempLow{
-    color: #0004ff;
-    width: 20px;
-  }
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td,
+th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
+.tempHigh {
+  color: #ff0000;
+  width: 20px;
+}
+
+.tempMidHigh {
+  color: #fffb00;
+  width: 20px;
+}
+
+.tempNormal {
+  color: #02ed26;
+  width: 20px;
+}
+
+.tempMidLow {
+  color: #16fae7;
+  width: 20px;
+}
+
+.tempLow {
+  color: #0004ff;
+  width: 20px;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.6); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  border-radius: 20px;
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
