--- a/frontend/pages/login/login.css
+++ b/frontend/pages/login/login.css
@@ -1,12 +1,12 @@
 body {font-family: Arial, Helvetica, sans-serif;}
 
 .container{
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 /* Full-width input fields */
-input[type=text], input[type=password] {
+input[type=text], input[type=password], input[type=email] {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -30,16 +30,12 @@ button:hover {
   opacity: 0.8;
 }
 
-img.avatar {
-  width: 40%;
-  border-radius: 50%;
-}
-
-.form-container {
+.form-container  {
+  width: 800px;
   padding: 16px;
 }
 
 .registerText{
-    display: flex;
-    justify-content: space-between;
+display: flex;
+justify-content: space-between;
 }
