--- a/frontend/pages/register/register.css
+++ b/frontend/pages/register/register.css
@@ -1,13 +1,12 @@
 body {font-family: Arial, Helvetica, sans-serif;}
 
 .container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
 /* Full-width input fields */
-input[type=text], input[type=password] {
+input[type=text], input[type=password], input[type=email] {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -31,12 +30,8 @@ button:hover {
   opacity: 0.8;
 }
 
-img.avatar {
-  width: 40%;
-  border-radius: 50%;
-}
-
 .form-container  {
+  width: 800px;
   padding: 16px;
 }
 
