--- a/frontend/styles/frontpage.css
+++ b/frontend/styles/frontpage.css
@@ -6,11 +6,18 @@ body {
 main {
     width: 100vw;
     height: 100vh;
-    background-image: url("/img/background2.jpg");
+    background-image: url("/img/background.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     background-color: rgba(255, 255, 255, 0.5);
+}
+
+#logo {
+	height: 1em;
+	position: relative;
+	top: 5px;
+	filter: drop-shadow(3px 3px 6px rgba(0, 0, 0, 0.4));
 }
 
 h1 {
