--- a/frontend/styles/auth.css
+++ b/frontend/styles/auth.css
@@ -1,6 +1,31 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
 }
+
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .topnav a.active {
+    background-color: #04aa6d;
+    color: white;
+  }
 
 /* Full-width input fields */
 input[type=text], input[type=password], input[type=email] {
@@ -15,12 +40,12 @@ input[type=text], input[type=password], input[type=email] {
 /* Set a style for all buttons */
 button {
     background-color: #04AA6D;
-    color: white;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
     cursor: pointer;
     width: 100%;
+    border-radius: 20px;
 }
 
 button:hover {
@@ -49,6 +74,3 @@ button:hover {
     margin-top: 1rem;
 }
 
-button{
-    border-radius: 20px;
-}
