--- a/frontend/styles/home.css
+++ b/frontend/styles/home.css
@@ -11,7 +11,7 @@ table {
   margin: 20px;
   font-family: arial, sans-serif;
   border-collapse: collapse;
-  width: 100%;
+  width: 95%;
 }
 
 td,
@@ -52,4 +52,9 @@ tr:nth-child(even) {
 
 .chartContainer{
   margin: 20px;
+}
+
+.tableConatiner{
+  display: flex;
+  justify-content: center;
 }
