--- a/frontend/styles/auth.css
+++ b/frontend/styles/auth.css
@@ -6,9 +6,9 @@ body {
 .topnav {
     overflow: hidden;
     background-color: #333;
-  }
-  
-  .topnav a {
+}
+
+.topnav a {
     height: 20px;
     float: left;
     color: #f2f2f2;
@@ -16,9 +16,9 @@ body {
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
-  }
-  
-  .topnav a:hover, .topnav span:hover {
+}
+
+.topnav a:hover, .topnav span:hover {
     background-color: #ddd;
     color: black;
     cursor: pointer;
@@ -66,15 +66,15 @@ button:hover {
     margin-top: 0.5rem;
 }
 
-.logoutContainer{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 50px;
+.logout-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
 }
 
-.logout{
-  width: 20px;
-  height: 24px;
+.logout {
+    width: 20px;
+    height: 24px;
 }
 
