--- a/frontend/styles/home.css
+++ b/frontend/styles/home.css
@@ -15,6 +15,12 @@ body {
     border: 1px solid #DDD;
 }
 
+#filters {
+    margin: 2rem auto;
+    display: flex;
+    justify-content: space-between;
+}
+
 table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
@@ -102,5 +108,28 @@ table tr:not(:last-child) .temperature {
 
 #view-more:active {
     background-color: #FCFCFC;
+}
+
+.form-control {
+    display: flex;
+    flex-direction: column;
+}
+
+label {
+    font-size: 0.85rem;
+    padding-left: 0.2rem;
+    color: #616161;
+}
+
+select {
+    background-color: white;
+    color: #424242;
+    border: 1px solid #DDD;
+    border-radius: 8px;
+    padding: 0.5rem 1rem;
+}
+
+select:focus {
+    border-color: #1E88E5;
 }
 
